--- a/src/statm/dev/basketballvisualization/display/GameDisplay.mxml
+++ b/src/statm/dev/basketballvisualization/display/GameDisplay.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group 
-    width="970" height="530"
+    width="940" height="500"
     xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark"
     xmlns:mx="library://ns.adobe.com/flex/mx"
@@ -8,7 +8,8 @@
 
     <fx:Script>
         <![CDATA[
-            import statm.dev.basketballvisualization.data.entities.Game;
+			import statm.dev.basketballvisualization.data.entities.Game;
+			import statm.dev.basketballvisualization.utils.StringUtils;
 
             [Bindable]
             private var game:Game;
@@ -19,35 +20,28 @@
             }
         ]]>
     </fx:Script>
+	
+	<display:BasketballCourt/>
 
-    <s:Rect 
-        left="0" right="0" top="0" bottom="0">
-        <s:fill>
-            <s:SolidColor color="#CCCCCC"/>
-        </s:fill>
-    </s:Rect>
-
-    <s:Group 
-        left="15" right="15" top="15" bottom="15">
-		<s:Rect left="0" right="0" top="0" bottom="0">
-			<s:stroke>
-				<s:SolidColorStroke weight="4" color="#FFFFFF"/>
-			</s:stroke>
-		</s:Rect>
-		
-		<display:RefereeDisplay id="ref0"/>
-		<display:RefereeDisplay id="ref1"/>
-		<display:RefereeDisplay id="ref2"/>
-        <display:PlayerDisplay id="player0"/>
-        <display:PlayerDisplay id="player1"/>
-        <display:PlayerDisplay id="player2"/>
-        <display:PlayerDisplay id="player3"/>
-        <display:PlayerDisplay id="player4"/>
-        <display:PlayerDisplay id="player5"/>
-        <display:PlayerDisplay id="player6"/>
-        <display:PlayerDisplay id="player7"/>
-        <display:PlayerDisplay id="player8"/>
-        <display:PlayerDisplay id="player9"/>
-        <display:BallDisplay id="ball"/>
-    </s:Group>
+    <display:RefereeDisplay id="ref0"/>
+    <display:RefereeDisplay id="ref1"/>
+    <display:RefereeDisplay id="ref2"/>
+    <display:PlayerDisplay id="player0"/>
+    <display:PlayerDisplay id="player1"/>
+    <display:PlayerDisplay id="player2"/>
+    <display:PlayerDisplay id="player3"/>
+    <display:PlayerDisplay id="player4"/>
+    <display:PlayerDisplay id="player5"/>
+    <display:PlayerDisplay id="player6"/>
+    <display:PlayerDisplay id="player7"/>
+    <display:PlayerDisplay id="player8"/>
+    <display:PlayerDisplay id="player9"/>
+    <display:BallDisplay id="ball"/>
+	
+    <s:Label 
+        top="-22"
+        color="#666666"
+        fontSize="18"
+        horizontalCenter="0"
+        text="{StringUtils.formatGameClock(game.gameClock)}"/>
 </s:Group>
