--- a/src/statm/dev/basketballvisualization/display/GameDisplay.mxml
+++ b/src/statm/dev/basketballvisualization/display/GameDisplay.mxml
@@ -9,7 +9,10 @@
     <fx:Script>
         <![CDATA[
 			import statm.dev.basketballvisualization.data.entities.Game;
+			import statm.dev.basketballvisualization.data.entities.PlayerType;
+			import statm.dev.basketballvisualization.events.GameEvent;
 			import statm.dev.basketballvisualization.utils.StringUtils;
+			import statm.dev.basketballvisualization.utils.log;
 
             [Bindable]
             private var game:Game;
@@ -17,7 +20,35 @@
             public function setGame(game:Game):void
             {
                 this.game = game;
+				game.addEventListener(GameEvent.UPDATE, game_updateHandler);
             }
+			
+			private function game_updateHandler(event:GameEvent):void
+			{
+				game.redrawNeeded && redraw();
+			}
+			
+			private function redraw():void
+			{
+				log("redraw");
+				ref0.setReferee(game.getReferee(0));
+				ref1.setReferee(game.getReferee(1));
+				ref2.setReferee(game.getReferee(2));
+				
+				home0.setPlayer(game.getPlayer(0, PlayerType.HOME));
+				home1.setPlayer(game.getPlayer(1, PlayerType.HOME));
+				home2.setPlayer(game.getPlayer(2, PlayerType.HOME));
+				home3.setPlayer(game.getPlayer(3, PlayerType.HOME));
+				home4.setPlayer(game.getPlayer(4, PlayerType.HOME));
+				
+				away0.setPlayer(game.getPlayer(0, PlayerType.AWAY));
+				away1.setPlayer(game.getPlayer(1, PlayerType.AWAY));
+				away2.setPlayer(game.getPlayer(2, PlayerType.AWAY));
+				away3.setPlayer(game.getPlayer(3, PlayerType.AWAY));
+				away4.setPlayer(game.getPlayer(4, PlayerType.AWAY));
+				
+				ball.setBall(game.getBall());
+			}
         ]]>
     </fx:Script>
 	
@@ -26,16 +57,19 @@
     <display:RefereeDisplay id="ref0"/>
     <display:RefereeDisplay id="ref1"/>
     <display:RefereeDisplay id="ref2"/>
-    <display:PlayerDisplay id="player0"/>
-    <display:PlayerDisplay id="player1"/>
-    <display:PlayerDisplay id="player2"/>
-    <display:PlayerDisplay id="player3"/>
-    <display:PlayerDisplay id="player4"/>
-    <display:PlayerDisplay id="player5"/>
-    <display:PlayerDisplay id="player6"/>
-    <display:PlayerDisplay id="player7"/>
-    <display:PlayerDisplay id="player8"/>
-    <display:PlayerDisplay id="player9"/>
+	
+    <display:PlayerDisplay id="home0"/>
+    <display:PlayerDisplay id="home1"/>
+    <display:PlayerDisplay id="home2"/>
+    <display:PlayerDisplay id="home3"/>
+    <display:PlayerDisplay id="home4"/>
+	
+    <display:PlayerDisplay id="away0"/>
+    <display:PlayerDisplay id="away1"/>
+    <display:PlayerDisplay id="away2"/>
+    <display:PlayerDisplay id="away3"/>
+    <display:PlayerDisplay id="away4"/>
+	
     <display:BallDisplay id="ball"/>
 	
     <s:Label 
@@ -43,5 +77,5 @@
         color="#666666"
         fontSize="18"
         horizontalCenter="0"
-        text="{StringUtils.formatGameClock(game.gameClock)}"/>
+        text="{StringUtils.formatGameClock(game.gameClock) + ' (frame ' + game.playhead + '/' + game.totalFrame + ')'}"/>
 </s:Group>
