--- a/src/statm/dev/basketballvisualization/App.mxml
+++ b/src/statm/dev/basketballvisualization/App.mxml
@@ -4,18 +4,40 @@
     minHeight="600"
     minWidth="1040"
     addedToStage="init()"
-    frameRate="50"
+    frameRate="25"
     xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark"
     xmlns:mx="library://ns.adobe.com/flex/mx"
-    xmlns:display="statm.dev.basketballvisualization.display.*">
+    xmlns:display="statm.dev.basketballvisualization.display.*"
+    xmlns:ns="http://flex.apache.org/experimental/ns"
+    xmlns:ui="statm.dev.basketballvisualization.ui.*">
 
     <fx:Style source="styles.css"/>
 
     <fx:Script source="app.as"/>
 
+    <fx:Script>
+        <![CDATA[
+            import statm.dev.basketballvisualization.utils.StringUtils;
+        ]]>
+    </fx:Script>
+
+    <!-- game display -->
     <display:GameDisplay id="gameDisplay"
         horizontalCenter="0"
         verticalCenter="0"/>
 
+    <!-- HUD label -->
+    <s:Label id="HUDLabel"
+        color="#666666"
+        fontSize="18"
+        horizontalCenter="0"
+        verticalCenter="-270"
+        text="{StringUtils.formatGameClock(game.gameClock)
+				+ ' (frame ' + game.playhead + '/' + game.totalFrame + ')'}"/>
+
+    <!-- progress bar -->
+    <ui:PlaybackUI id="playbackUI"
+        horizontalCenter="0"
+        verticalCenter="290"/>
 </s:Application>
