--- a/src/statm/dev/basketballvisualization/display/BallHeightBar.mxml
+++ b/src/statm/dev/basketballvisualization/display/BallHeightBar.mxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group 
-    x="{ball.x * 10 - width / 2}" y="{ball.y * 10 - height / 2}" width="10" height="10"
-    visible="false"
+<s:Rect 
+    width="5" height="{ball.z * 25}"
     xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark"
     xmlns:mx="library://ns.adobe.com/flex/mx">
+
     <fx:Script>
         <![CDATA[
             import statm.dev.basketballvisualization.data.entities.Ball;
@@ -20,18 +20,7 @@
         ]]>
     </fx:Script>
 
-    <s:Ellipse 
-        left="0" right="0" top="0" bottom="0">
-        <s:stroke>
-            <s:SolidColorStroke 
-                color="#FFFFFF"
-                weight="1"/>
-        </s:stroke>
-        <s:fill>
-            <s:SolidColor color="#FFFF00"/>
-        </s:fill>
-        <s:filters>
-            <s:GlowFilter color="#000000"/>
-        </s:filters>
-    </s:Ellipse>
-</s:Group>
+    <s:fill>
+        <s:SolidColor color="#FFFF00"/>
+    </s:fill>
+</s:Rect>
