--- a/src/statm/dev/basketballvisualization/display/BasketballCourt.mxml
+++ b/src/statm/dev/basketballvisualization/display/BasketballCourt.mxml
@@ -9,7 +9,7 @@
         <s:SolidColorStroke id="lineStroke"
             color="#FFFFFF"
             weight="4"
-			caps="square"
+            caps="square"
             joints="miter"/>
     </fx:Declarations>
 
@@ -39,11 +39,11 @@
         verticalCenter="0">
         <s:Line 
             height="60"
-			left="0"
+            left="0"
             stroke="{lineStroke}"/>
         <s:Line 
             width="5"
-			left="0"
+            left="0"
             verticalCenter="0"
             stroke="{lineStroke}"/>
         <s:Ellipse 
@@ -66,48 +66,92 @@
             right="0"
             verticalCenter="0"
             stroke="{lineStroke}"/>
-		<s:Ellipse 
-			width="18" height="18"
-			right="5"
-			verticalCenter="0"
-			stroke="{lineStroke}"/>
+        <s:Ellipse 
+            width="18" height="18"
+            right="5"
+            verticalCenter="0"
+            stroke="{lineStroke}"/>
     </s:Group>
-	
-	<!-- three-point line (L) -->
-	<s:Group
-		left="2"
-		verticalCenter="0">
-		<s:Line width="52.5" top="0" stroke="{lineStroke}"/>
-		<s:Line width="52.5" top="395" stroke="{lineStroke}"/>
-		<s:Group clipAndEnableScrolling="true" left="52.5">
-			<s:Ellipse width="395" height="395" stroke="{lineStroke}" top="0" left="-197.5"/>
-		</s:Group>
-	</s:Group>
-	
-	<!-- three-point line (R) -->
-	<s:Group
-		right="0"
-		verticalCenter="0">
-		<s:Line width="52.5" top="0" right="0" stroke="{lineStroke}"/>
-		<s:Line width="52.5" top="395" right="0" stroke="{lineStroke}"/>
-		<s:Group clipAndEnableScrolling="true" right="52.5">
-			<s:Ellipse width="395" height="395" stroke="{lineStroke}" top="0" right="-197.5"/>
-		</s:Group>
-	</s:Group>
 
-	<!-- three-second area (L) -->
-	<s:Group left="2" verticalCenter="0">
-		<s:Rect width="190" height="120" stroke="{lineStroke}" top="4"/>
-		<s:Group clipAndEnableScrolling="true" left="190" height="128">
-			<s:Ellipse width="120" height="120" stroke="{lineStroke}" left="-60" top="4"/>
-		</s:Group>
-	</s:Group>
-	
-	<!-- three-second area (R) -->
-	<s:Group right="0" verticalCenter="0">
-		<s:Rect width="190" height="120" stroke="{lineStroke}" top="4" right="0"/>
-		<s:Group clipAndEnableScrolling="true" right="190" height="128">
-			<s:Ellipse width="120" height="120" stroke="{lineStroke}" right="-60" top="4"/>
-		</s:Group>
-	</s:Group>
+    <!-- three-point line (L) -->
+    <s:Group 
+        left="2"
+        verticalCenter="0">
+        <s:Line 
+            width="52.5"
+            top="0"
+            stroke="{lineStroke}"/>
+        <s:Line 
+            width="52.5"
+            top="395"
+            stroke="{lineStroke}"/>
+        <s:Group 
+            left="52.5"
+            clipAndEnableScrolling="true">
+            <s:Ellipse 
+                width="395" height="395"
+                left="-197.5" top="0"
+                stroke="{lineStroke}"/>
+        </s:Group>
+    </s:Group>
+
+    <!-- three-point line (R) -->
+    <s:Group 
+        right="0"
+        verticalCenter="0">
+        <s:Line 
+            width="52.5"
+            right="0" top="0"
+            stroke="{lineStroke}"/>
+        <s:Line 
+            width="52.5"
+            right="0" top="395"
+            stroke="{lineStroke}"/>
+        <s:Group 
+            right="52.5"
+            clipAndEnableScrolling="true">
+            <s:Ellipse 
+                width="395" height="395"
+                right="-197.5" top="0"
+                stroke="{lineStroke}"/>
+        </s:Group>
+    </s:Group>
+
+    <!-- three-second area (L) -->
+    <s:Group 
+        left="2"
+        verticalCenter="0">
+        <s:Rect 
+            width="190" height="120"
+            top="4"
+            stroke="{lineStroke}"/>
+        <s:Group 
+            height="128"
+            left="190"
+            clipAndEnableScrolling="true">
+            <s:Ellipse 
+                width="120" height="120"
+                left="-60" top="4"
+                stroke="{lineStroke}"/>
+        </s:Group>
+    </s:Group>
+
+    <!-- three-second area (R) -->
+    <s:Group 
+        right="0"
+        verticalCenter="0">
+        <s:Rect 
+            width="190" height="120"
+            right="0" top="4"
+            stroke="{lineStroke}"/>
+        <s:Group 
+            height="128"
+            right="190"
+            clipAndEnableScrolling="true">
+            <s:Ellipse 
+                width="120" height="120"
+                right="-60" top="4"
+                stroke="{lineStroke}"/>
+        </s:Group>
+    </s:Group>
 </s:Group>
