--- a/src/statm/dev/basketballvisualization/ui/ScrubBar.mxml
+++ b/src/statm/dev/basketballvisualization/ui/ScrubBar.mxml
@@ -2,5 +2,22 @@
 <s:HSlider xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		   xmlns:s="library://ns.adobe.com/flex/spark" 
 		   xmlns:mx="library://ns.adobe.com/flex/mx">
-	
+	<fx:Script>
+		<![CDATA[
+			import statm.dev.basketballvisualization.data.entities.Game;
+			
+			private var _game:Game;
+			
+			[Bindable]
+			public function get game():Game
+			{
+				return _game;
+			}
+			
+			public function set game(value:Game):void
+			{
+				_game = value;
+			}
+		]]>
+	</fx:Script>
 </s:HSlider>
