--- a/src/statm/dev/basketballvisualization/display/BallDisplay.mxml
+++ b/src/statm/dev/basketballvisualization/display/BallDisplay.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group 
-    x="{ball.x * 10 - width / 2}" y="{ball.y * 10 - height / 2}" width="10" height="10"
+    x="{ball.x * Constants.MAGNIFY_RATIO - width / 2}" y="{ball.y * Constants.MAGNIFY_RATIO - height / 2}" width="10" height="10"
     visible="false"
     xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark"
@@ -8,6 +8,7 @@
     <fx:Script>
         <![CDATA[
             import statm.dev.basketballvisualization.data.entities.Ball;
+            import statm.dev.basketballvisualization.utils.Constants;
 
             [Bindable]
             private var ball:Ball;
@@ -28,7 +29,7 @@
                 weight="1"/>
         </s:stroke>
         <s:fill>
-            <s:SolidColor color="#FFFF00"/>
+            <s:SolidColor color="{ball.isShooting ? 0xFF0000 : 0xFFFF00}"/>
         </s:fill>
         <s:filters>
             <s:GlowFilter color="#000000"/>
