--- a/src/statm/dev/basketballvisualization/display/RefereeDisplay.mxml
+++ b/src/statm/dev/basketballvisualization/display/RefereeDisplay.mxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group 
-	x="{referee.x * 10 - width / 2}" y="{referee.y * 10 - height / 2}" width="15" height="15"
+	x="{referee.x * Constants.MAGNIFY_RATIO - width / 2}" y="{referee.y * Constants.MAGNIFY_RATIO - height / 2}" width="15" height="15"
 	visible="false"
     xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:s="library://ns.adobe.com/flex/spark"
     xmlns:mx="library://ns.adobe.com/flex/mx">
     <fx:Script>
         <![CDATA[
-            import statm.dev.basketballvisualization.data.entities.Referee;
+			import statm.dev.basketballvisualization.data.entities.Referee;
+			import statm.dev.basketballvisualization.utils.Constants;
             [Bindable]
             private var referee:Referee;
 
